k8s/deploy-communication-layer.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: booking-nm

# RabbitMQ Deployment and Service
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-rabbit
  namespace: booking-nm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: rabbitmq:3-management
          ports:
            - containerPort: 5672
              name: amqp
            - containerPort: 15672
              name: management
---
apiVersion: v1
kind: Service
metadata:
  name: booking-rabbit
  namespace: booking-nm
spec:
  selector:
    app: rabbitmq
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
      name: amqp
    - protocol: TCP
      port: 15672
      targetPort: 15672
      name: management

# Database Deployment and Services
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mssql-bk-depl
  namespace: booking-nm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mssql
  template:
    metadata:
      labels:
        app: mssql
    spec:
      containers:
        - name: mssql
          image: mcr.microsoft.com/mssql/server:2017-latest
          ports:
            - containerPort: 1433
          volumeMounts:
            - mountPath: /var/opt/mssql/data
              name: mssqldb
      volumes:
        - name: mssqldb
          persistentVolumeClaim:
            claimName: mssql-bk-claim
---
apiVersion: v1
kind: Service
metadata:
  name: mssql-bk-clusterip-srv
  namespace: booking-nm
spec:
  type: ClusterIP
  selector:
    app: mssql
  ports:
    - name: mssql
      protocol: TCP
      port: 1433
      targetPort: 1433
